--- a/src/view/Main.fxml
+++ b/src/view/Main.fxml
@@ -47,14 +47,17 @@
                <children>
                   <StackPane prefHeight="150.0" prefWidth="200.0">
                      <children>
-                        <Button id="imagebutton" fx:id="image" mnemonicParsing="false" onAction="#imagenOnAction" prefHeight="172.0" prefWidth="201.0" style="-fx-background-radius: 100; -fx-background-color: null;">
+                        <Button id="imagebutton" fx:id="image" mnemonicParsing="false" onAction="#imagenOnAction" prefHeight="172.0" prefWidth="201.0" style="-fx-background-color: #ffffff;">
                            <graphic>
                               <ImageView fx:id="changePhoto" fitHeight="150.0" fitWidth="158.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../image/addphoto3.png" />
+                                    <Image url="@../../image/add_photo.png" />
                                  </image>
                               </ImageView>
                            </graphic>
+                           <StackPane.margin>
+                              <Insets right="20.0" />
+                           </StackPane.margin>
                         </Button>
                      </children>
                      <HBox.margin>
@@ -63,12 +66,12 @@
                   </StackPane>
                   <VBox alignment="CENTER_LEFT" prefHeight="150.0" prefWidth="370.0">
                      <children>
-                        <Label fx:id="labelWelcome" prefHeight="0.0" prefWidth="352.0" text="Bienvenido" textFill="WHITE">
+                        <Label fx:id="labelWelcome" prefHeight="0.0" prefWidth="352.0" text="Welcome" textFill="WHITE">
                            <font>
                               <Font name="Calibri Bold" size="34.0" />
                            </font>
                         </Label>
-                        <Label fx:id="labelNickName" prefHeight="0.0" prefWidth="352.0" text="Nombre de usuario:" textFill="WHITE">
+                        <Label fx:id="labelNickName" prefHeight="0.0" prefWidth="352.0" text="User name:" textFill="WHITE">
                            <font>
                               <Font name="Calibri Bold" size="14.0" />
                            </font>
@@ -76,7 +79,7 @@
                               <Insets left="2.0" />
                            </VBox.margin>
                         </Label>
-                        <Hyperlink fx:id="linkMyAccount" onAction="#cuentaOnAction" prefHeight="23.0" prefWidth="89.0" text="Mi cuenta &gt;" textFill="WHITE">
+                        <Hyperlink fx:id="linkMyAccount" onAction="#cuentaOnAction" prefHeight="23.0" prefWidth="89.0" text="Profile" textFill="WHITE">
                            <font>
                               <Font name="Calibri Bold" size="14.0" />
                            </font>
@@ -101,6 +104,7 @@
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -115,10 +119,10 @@
                   </ImageView>
                </graphic>
                <GridPane.margin>
-                  <Insets bottom="30.0" left="50.0" />
+                  <Insets />
                </GridPane.margin>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+            <Button alignment="CENTER" mnemonicParsing="false" GridPane.columnIndex="2" GridPane.halignment="CENTER">
                <graphic>
                   <ImageView fitHeight="175.0" fitWidth="175.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -127,8 +131,17 @@
                   </ImageView>
                </graphic>
                <GridPane.margin>
-                  <Insets bottom="30.0" right="50.0" />
+                  <Insets />
                </GridPane.margin>
+            </Button>
+            <Button alignment="CENTER" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+               <graphic>
+                  <ImageView fitHeight="175.0" fitWidth="175.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../image/categories.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
          </children>
       </GridPane>
