--- a/src/view/Categories.fxml
+++ b/src/view/Categories.fxml
@@ -21,7 +21,7 @@
                   <Font size="36.0" />
                </font>
             </Text>
-            <Button fx:id="home" alignment="CENTER" layoutX="570.0" layoutY="9.0" mnemonicParsing="false" onAction="#home" AnchorPane.rightAnchor="14.0">
+            <Button fx:id="home" alignment="CENTER" layoutX="570.0" layoutY="7.0" mnemonicParsing="false" onAction="#home" style="-fx-background-color: #088f8f;" AnchorPane.rightAnchor="14.0">
                <graphic>
                   <ImageView fitHeight="75.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                      <image>
