--- a/src/view/SignUp.fxml
+++ b/src/view/SignUp.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" stylesheets="@styleSheet.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" stylesheets="@styleSheet.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.SignUpController">
    <children>
       <Text fill="#088f8f" layoutX="98.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registration Form">
          <font>
@@ -38,6 +37,6 @@
             <Font name="System Italic" size="12.0" />
          </font>
       </Text>
-      <Button layoutX="145.0" layoutY="477.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="112.0" styleClass="btn" text="Sign Up" textFill="WHITE" />
+      <Button fx:id="signUp" layoutX="145.0" layoutY="477.0" mnemonicParsing="false" onAction="#signUp" prefHeight="26.0" prefWidth="112.0" styleClass="btn" text="Sign Up" textFill="WHITE" />
    </children>
 </AnchorPane>
