--- a/src/view/SignUp.fxml
+++ b/src/view/SignUp.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" stylesheets="@styleSheet.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" stylesheets="@styleSheet.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.SignUpController">
    <children>
       <Text fill="#088f8f" layoutX="98.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registration Form">
          <font>
@@ -19,9 +19,9 @@
             <Font name="System Italic" size="14.0" />
          </font>
       </Text>
-      <TextField layoutX="125.0" layoutY="313.0" promptText="Enter you user name" styleClass="signupBor" stylesheets="@styleSheet.css" />
-      <PasswordField layoutX="124.0" layoutY="378.0" promptText="Enter your password" styleClass="signupBor" />
-      <PasswordField layoutX="126.0" layoutY="445.0" promptText="Confirm password" styleClass="signupBor" />
+      <TextField fx:id="userNameField" layoutX="125.0" layoutY="313.0" promptText="Enter you user name" styleClass="signupBor" stylesheets="@styleSheet.css" />
+      <PasswordField fx:id="passwordField2" layoutX="124.0" layoutY="378.0" promptText="Enter your password" styleClass="signupBor" />
+      <PasswordField fx:id="repeatPassword" layoutX="126.0" layoutY="445.0" promptText="Confirm password" styleClass="signupBor" />
       <Text fill="#088f8f" layoutX="126.0" layoutY="304.0" strokeType="OUTSIDE" strokeWidth="0.0" text="User Name:">
          <font>
             <Font name="System Italic" size="12.0" />
@@ -37,18 +37,18 @@
             <Font name="System Italic" size="12.0" />
          </font>
       </Text>
-      <Button layoutX="143.0" layoutY="524.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="112.0" styleClass="btn" text="Sign Up" textFill="WHITE" />
+      <Button fx:id="signUpButton" layoutX="143.0" layoutY="524.0" mnemonicParsing="false" onAction="#signUp" prefHeight="26.0" prefWidth="112.0" styleClass="btn" text="Sign Up" textFill="WHITE" />
       <Text fill="#088f8f" layoutX="127.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Real Name: ">
          <font>
             <Font name="System Italic" size="12.0" />
          </font>
       </Text>
-      <TextField layoutX="126.0" layoutY="177.0" promptText="Enter your name" styleClass="signupBor" />
+      <TextField fx:id="realName" layoutX="126.0" layoutY="177.0" promptText="Enter your name" styleClass="signupBor" />
       <Text fill="#088f8f" layoutX="127.0" layoutY="233.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email:">
          <font>
             <Font name="System Italic" size="12.0" />
          </font>
       </Text>
-      <TextField layoutX="126.0" layoutY="246.0" promptText="Enter your email" styleClass="signupBor" />
+      <TextField fx:id="email" layoutX="126.0" layoutY="246.0" promptText="Enter your email" styleClass="signupBor" />
    </children>
 </AnchorPane>
