--- a/src/view/LogIn.fxml
+++ b/src/view/LogIn.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -58,6 +59,7 @@
                   <Font size="18.0" />
                </font>
             </Text>
+            <Label fx:id="erroeLabel" layoutX="98.0" layoutY="339.0" text="Wrong Credentials, Try again." textFill="RED" />
          </children>
       </AnchorPane>
    </right>
